# AJAX_Dashboard

./: .gitignore  Ajax-Backend.spec  Data_distrubtion.txt  README.md  app.py  build.py  db_backup_restore.py  db_handler.py  elevated.manifest  main.py  modbus_handler.py  pyproject.toml  requirements.txt
Blueprints/: frontend_routes.py  plc_communication_routes.py  socket_routes.py
DAQ/: Converstion.py  modbus_rtu.py  modbus_tcp.py  opcua.py
Generate/: Create_dummy_data.py
Mslave/: Mbslav1.mbs  Mbslav2.mbs  Mbslav3.mbs  Mbslav4.mbs  Mbslave5 - Coil 1.mbs
Test/: Fakeit.py  Socket_test.html  modbus_read.py  modbus_read_sample.py  socket_testing.py
backups/: Ajax_backup_20250630_163044.sql  Ajax_backup_20250630_163048.sql  Ajax_backup_20250630_163052.sql  Ajax_backup_20250630_163104.sql  Ajax_backup_20250630_170029.sql  Ajax_backup_20250630_170032.sql  Ajax_backup_20250630_170601.sql  Ajax_backup_20250630_170623.sql  Ajax_backup_20250630_171227.sql  Ajax_backup_20250630_171249.sql  Ajax_backup_20250701_104907.sql  Ajax_backup_20250701_104909.sql  Ajax_backup_20250701_110111.sql  Ajax_backup_20250701_112117.sql  Ajax_backup_20250701_112119.sql  Ajax_backup_20250701_112655.sql  Ajax_backup_20250701_113233.sql  Ajax_backup_20250701_113235.sql  Ajax_backup_20250701_113239.sql  Ajax_backup_20250701_113301.sql  Ajax_backup_20250701_113303.sql  Ajax_backup_20250701_113335.sql  Ajax_backup_20250701_163517.sql  Ajax_backup_20250701_163519.sql  Ajax_backup_20250701_164452.sql  Ajax_backup_20250701_164453.sql  Ajax_backup_20250701_165714.sql  Ajax_backup_20250701_165800.sql  (+13 more)
(+15 files in other folders)
